# chatbot-project

./: .dvcignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  commits.txt  context.md  data.dvc  data.md  delete.md  docker-compose.yml  models.dvc  pyproject.toml  recommendation-algorithms.md  setup.py  zensical.toml
.agents/commands/: marimo.md
.agents/docs/: marimo.md
.agents/prompts/: pr-summary.md
.claude/: settings.local.json
.dvc/: .gitignore  config
.github/workflows/: docs.yml  monthly-update-emotions.yaml  opencode-review.yml  opencode-summary.yml  pr_gate.yml  release-mcp.yml  weekly-retrain-bpr.yaml  weekly-retrain-ncf.yaml
alembic/: alembic.ini  env.py
alembic/versions/: 110035659a61_.py  120f4b8167ee_initial_schema.py  1edca5c1893a_add_ondelete_cascade_to_all_foreign_keys.py  38ec2ea211e9_simplify_schema_add_similar_books_and_.py  4049dada846b_.py  4368ddbc579b_add_external_id_to_users_table.py  51f5ee597203_.py  64894b366f6f_drop_stale_rating_dist_columns_from_.py  6c9fc7128024_.py  8b599b08e052_.py  9913db3ab380_.py  a1b2c3d4e5f6_add_tags_tables.py  e6b076b11888_.py  (+6 more)
bookdb/: seed.py
chatbots/: README.md
docs/: api.md  chatbots.md  chromadb.md  context.md  database-setup.md  embedding_benchmark_report.md  embeddings.md  entity-extraction.md  index.md  ml-recommendations.md  qdrant.md  scripts.md  web-app.md  weekly-retrain-guide.md
examples/: README.md  template.ipynb
experiments/: RESULTS.md  exp_clustering.py  exp_query_rewriting.py  exp_reranker.py
mcp/: go.mod  install.sh  main.go  prompt_other.go  prompt_unix.go  server.go
notebooks/: test_chromadb_crud.ipynb
scripts/: README.md  aggregate_book_sentiments.py  backpopulate_relations.py  benchmark_embeddings.py  check_qdrant_client.py  finetune_embeddinggemma.py  finetune_emotion_classifier.py  generate_benchmark_dataset.py  generate_book_embeddings.py  generate_finetuned_book_embeddings.py  generate_reviews_embeddings.py  import_goodreads_to_postgres.py  import_tags_from_shelves.py  infer_embeddinggemma.py  ingest_books_embeddings_to_qdrant.py  ingest_reviews_embeddings_to_qdrant.py  label_emotions.py  monthly_update_emotions.py  rag_books_test.py  run_embeddinggemma_finetuning.sh  run_generate_embeddings.sh  serve_embeddinggemma.py  train_bpr.py  train_ncf.py  train_sar.py  try_chatbot_llm.py  try_rewriter.py  update_user_names.py  upload_model_to_huggingface.py  weekly_retrain.py  weekly_retrain_bpr.py  weekly_retrain_ncf.py
site/: 404.html  index.html  search.json
tests/: README.md  test_datasets.py  test_eda.py  test_processing.py  test_validation.py
(+317 files in other folders)
