[project]
name = "bookdb"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yousef Amirghofran", email = "yamirghofran@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19", # 1.19 required by tensorflow 2.6
    "pandas>2,<3",
    "ipykernel>=4.6.1,<7",
    "jupyter>=1,<2",
    "zensical>=0.0.2",
    "fsspec>=2025.3.0",
    "s3fs>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bookdb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bookdb",
]

[tool.hatch.build.targets.wheel]
packages = ["bookdb"]

[tool.uv]
dev-dependencies = [
    "black>=22.0.0",
    "pytest>=7.0.0",
]
